--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "scripts": {
     "lint": "eslint --max-warnings 0 . && tsc --noEmit",
-    "prepare": "husky install && bob build",
+    "prepare": "echo 'husky install && bob build are currently disabled to prevent any dev issues on some machines'",
+    "expected_prepare": "husky install && bob build",
     "format": "tools/format.sh"
   },
   "bugs": {
@@ -46,7 +47,7 @@
     "husky": "7.0.2",
     "lint-staged": "11.2.3",
     "prettier": "2.4.1",
-    "react-native-builder-bob": "0.18.2",
+    "react-native-builder-bob": "^0.18.2",
     "typescript": "4.6.2"
   },
   "lint-staged": {
